completed extraction of kb module